# plants

./: .gitignore  CMakeLists.txt  README.md  gradle.properties
camera_remote/: README.md  config.example.ini
camera_remote/camera_remote/: __init__.py  burst.py  camera.py  capture.py  config.py  locking.py  metadata.py  metricsdb.py  shellsession.py  storage.py  tatry.py  timelapse.py  web.py
camera_remote/docs/: capture-quality-roadmap.md
camera_remote/scripts/: capture_once.sh  install.sh  status.sh  uninstall.sh  update_from_git.sh
camera_remote/static/: checklista-tatry.html
camera_remote/systemd/: camera-remote-update.service  camera-remote-update.timer  camera-remote.service  camera-snapshot.service  (+3 more)
cpp/: ConfigManager.cpp  FileRequestProvider.cpp  FileRequestProvider.h  RequestProvider.cpp  RequestProvider.h  Scheduler.cpp  Scheduler.h  TokenManager.cpp  UtilityFunctions.cpp  UtilityFunctions.h  ascheduler.cpp  scheduler.cpp
cpp/scheduler/: CMakeLists.txt  build.sh  main.cpp
cpp/scheduler/include/: ConfigManager.h  FileRequestProvider.h  FileRequestSource.h  Request.h  RequestProvider.h  RequestSource.h  Scheduler.h  TokenManager.h  UtilityFunctions.h  WorkUnit.h
cpp/scheduler/src/: ConfigManager.cpp  FileRequestProvider.cpp  FileRequestSource.cpp  Scheduler.cpp  TokenManager.cpp  UtilityFunctions.cpp
docs/: design.drawio
java/: build.gradle
meta/: commands.txt  compile.sh  env-setup.sh  env-setup.txt  git-update.sh  init.sh  pi-setup.txt  tp-link-install.sh
server/: main.py  server-install.sh
shell/: .profile  TODO.md  ifttt_trigger.sh
(+235 files in other folders)
